--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -76,4 +76,4 @@ link = "plugins/lazy-load/lozad.min.js"
 link = "plugins/google-map/map.js"
 [params.preloader]
 enable = true
-preloader = "images/logo.png"
+preloader = "images/logo-journey.png"
