--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -40,7 +40,7 @@ weight = 1
 [params]
 author = "Themefisher"
 description = "Responsive Multipurpose Parallax HTML5 Template"
-google_analitycs_id = ""
+google_analitycs_id = "UA-168907253-1"
 logo = "images/logo-journey.png"
 post_share = true
 social = []
